Freedom Sanbox Ant Deploy/src/objects/Option_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <label>Answer Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Question_Option_List__c</referenceTo>
        <relationshipLabel>Option Details</relationshipLabel>
        <relationshipName>Option_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From_Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal_Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal_Parent_Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuestionMaster</label>
        <referenceTo>Question_Bank_List__c</referenceTo>
        <relationshipLabel>Option Details</relationshipLabel>
        <relationshipName>Option_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched_Date_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wellness_Card_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wellness Card Detail</label>
        <referenceTo>Wellness_Card_Detail__c</referenceTo>
        <relationshipLabel>Option Details</relationshipLabel>
        <relationshipName>Option_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XRayScoreCard__c</fullName>
        <label>X-Ray Score Card</label>
        <referenceTo>XRay_ScoreCard__c</referenceTo>
        <relationshipLabel>Option Details</relationshipLabel>
        <relationshipName>Option_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Option Detail</label>
    <nameField>
        <displayFormat>Option Details -{0000}</displayFormat>
        <label>Option Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Option Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>